--- a/public/stylesheets/scss/lib/helpers/_forms.scss
+++ b/public/stylesheets/scss/lib/helpers/_forms.scss
@@ -198,7 +198,7 @@ optgroup {
 }
 
 button[type=submit], input[type='submit'] {
-	padding: 7px 12px;
+	padding: 10px 12px 7px 12px;
 	text-align: center;
 	font-weight: bold;
 	@include border-radius(5px);
