--- a/views/all_elements.haml
+++ b/views/all_elements.haml
@@ -120,7 +120,7 @@
               %option Second
               %option Third
 
-            %input{:type => "submit"}
+            %input.button{:type => "submit"}
 
           %h3 Stacked Checkboxes
           %ul.input-list
