--- a/public/stylesheets/scss/lib/helpers/_buttons.scss
+++ b/public/stylesheets/scss/lib/helpers/_buttons.scss
@@ -7,7 +7,7 @@
   display: inline-block;
   border: 1px solid darken($color, 5%);
   text-align: center;
-  padding: 4px 12px;
+  padding: 8px 12px 4px 12px;
   margin: 0 10px 20px 0;
   @if $width {
     min-width: $width; }
