--- a/public/stylesheets/scss/lib/typography/_elements.scss
+++ b/public/stylesheets/scss/lib/typography/_elements.scss
@@ -1,27 +1,3 @@
-/*
-Useful defaults
-*/
-
-::selection {
-	background: red;
-	color: white;
-}
-::-moz-selection {
-	background: red;
-	color: white;
-}
-
-img::selection {
-	background: transparent;
-}
-img::-moz-selection {
-	background: transparent;
-}
-
-body {
-	-webkit-tap-highlight-color: rgba(255,0,0, 0.62);
-}
-
 body,h1,h2,h3,h4,h5,h6,p,ul,ol,dl,input,textarea {
 	line-height: $baseline;
 	font-family: $sans;
@@ -33,67 +9,8 @@ p {
 	margin-bottom: $baseline;
 }
 
-ol {
-	margin-bottom: $baseline;
-	margin-left: $baseline;
-
-	ol {
-		margin-bottom: 0;
-	}
-
-}
-
-ul {
-	margin-bottom: $baseline;
-	list-style: disc;
-	li {
-		margin-bottom: $baseline / 4;
-		margin-left: 14px;
-
-		ul {
-			margin-left: $baseline;
-			margin-top: $baseline / 2;
-			margin-bottom: $baseline / 2;
-		}
-
-	}
-
-}
-
-ul.unstyled {
-	list-style: none;
-	li {
-		margin-left: 0;
-	}
-
-}
-
-
-dl {
-	margin-bottom: $baseline;
-
-	dt {
-		font-weight: bold;
-		margin-bottom: $baseline / 2;
-	}
-
-	dd {
-		margin-bottom: $baseline / 2;
-	}
-
-}
-
-
-abbr, acronym {
-	border-bottom: 1px dotted black;
-}
-
-address {
-	font-style: italic;
-}
-
-del {
-	color: black;
+img {
+	margin-bottom: 10px;
 }
 
 a {
@@ -106,57 +23,5 @@ a:hover {
 	text-decoration: none;
 }
 
-blockquote {
-	display: block;
-	font-weight: bold;
-	border-left: 4px solid #eeeeee;
-	padding: ($baseline*2) $baseline;
-	font-weight: bold;
-	font-size: 30px;
-	font-family: serif;
-	font-style: italic;
-	color: $grayDark;
-	line-height: 30px;
-	margin: $baseline 0;
-}
-
-pre, code {
-	margin: 10px 0;
-	white-space: pre;
-}
-
-pre, code, tt {
-	font: $mono;
-	line-height: 1.5;
-	padding: 0 3px 2px;
-	background: #FFFFEE;
-}
-
-q {
-	font-style: italic;
-	font-weight: bold;
-	font-family: $serif;
-}
-
-cite {
-	display: block;
-	font-weight: bold;
-}
-
-img {
-	margin-bottom: 10px;
-}
-
-figcaption {
-	display: block;
-	font-weight: bold;
-	font-style: italic;
-}
-
-small {
-	font-size: $font-size - 3;
-}
-
-strong {
-	font-weight: bold;
-}
+@import "lists";
+@import "misc_elements";
