--- a/public/sass/lib/layout/_grid_static.scss
+++ b/public/sass/lib/layout/_grid_static.scss
@@ -11,13 +11,13 @@ $col_total_width: $col_width + $gutters;
   margin-right: 0; }
 
 @mixin buildColumn($n: 1) {
-  width: $n * $col_width + ($n - 1) * $gutters;
+  width: ($n * $col_width + ($n - 1) * $gutters) / $width * 100%;
   @if $n == 1 {
     @include last; }
   @if $n == columns {
     @include last; }
   @else {
-    margin-right: $gutters; } }
+    margin-right: $gutters / $width * 100%; } }
 
 @for $i from 1 through $columns {
   .span-#{$i} {
