--- a/public/sass/lib/layout/_media_queries.scss
+++ b/public/sass/lib/layout/_media_queries.scss
@@ -16,8 +16,8 @@ and (min-width : 320px)
 and (max-width : 480px){
 	
 	@include column_reset;
-	.container{width:320px;}
-	img {max-width:320px;}
+	.container{width:90%;}
+	img {max-width:90%;}
 	
 }
 
@@ -37,7 +37,7 @@ and (min-width : 480px)
 and (max-width : 1024px){
 
 	@include column_reset;
-	.container{width:768px;}
+	.container{width:90%;}
 	
 }
 
