made images flexible

--- a/public/sass/lib/_settings.scss
+++ b/public/sass/lib/_settings.scss
@@ -9,7 +9,7 @@ $sans: "Myriad Pro", Myriad, Helvetica, Arial, sans serif;
 $serif: Georgia, serif;
 $mono: "Andale Mono WT", Monaco, "Courier New", Courier, monospace;
 
-$font-size: 14px;
+$font-size: 14; // Flexible Typesetting
 $links: #0069d6;
 $linksHover: darken($links, 10);
 
