--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,7 @@
 			= @title || 'Compass Framework'
 		%link{:rel => "stylesheet", :href => "/stylesheets/style.css", :type => "text/css", :media => "all"}
 		%script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
+		%meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
 	%body
 		.container
 			= yield
